Alteração da função do botao skip

--- a/second-page.html
+++ b/second-page.html
@@ -28,7 +28,7 @@
     <!-- Bloco de botões para transição de páginas -->
         <div class="container-buttons">
             <a class="btn-continue" href="three-page.html">Continue</a>
-            <a class="btn-skip" href="index.html">Skip</a>    
+            <a class="btn-skip" href="three-page.html">Skip</a>    
         </div>
 
     </main>
